--- a/pages/index.html
+++ b/pages/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-Welcome to Cactus!
-Hello from Anastasiya!
+Welcome to Cactus!<br>
+<h1>Hello from Anastasiya!</h1>
 {% endblock %}
